# wfr-telemetry

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced_usage/: index.html
api_reference/: index.html
docs/: advanced_usage.md  api_reference.md  dashboard.md  example_analysis.md  getting_started.md  index.md
docs/stylesheets/: extra.css
example_analysis/: index.html
examples/: end_to_end.py
getting_started/: index.html
scanner/: index.html
search/: search_index.json
src/slicks/: .env.example  __init__.py  calculations.py  gui.py
tests/: config_test.py  integration_test.py  test_replay_integration.py  test_scanner.py
